@@ -5,18 +5,14 @@ import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import no.difi.meldingsutveksling.api.ConversationService;
 import no.difi.meldingsutveksling.api.DpfConversationStrategy;
-import no.difi.meldingsutveksling.config.IntegrasjonspunktProperties;
 import no.difi.meldingsutveksling.domain.sbdh.SBDUtil;
 import no.difi.meldingsutveksling.ks.svarut.SvarUtService;
 import no.difi.meldingsutveksling.logging.Audit;
-import no.difi.meldingsutveksling.noarkexchange.BestEduAppReceiptService;
-import no.difi.meldingsutveksling.receipt.ReceiptStatus;
 import org.jetbrains.annotations.NotNull;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.core.annotation.Order;
 import org.springframework.stereotype.Component;
 
-import static com.google.common.base.Strings.isNullOrEmpty;
 import static no.difi.meldingsutveksling.logging.NextMoveMessageMarkers.markerFrom;
 import static no.difi.meldingsutveksling.receipt.ReceiptStatus.*;
 
@@ -28,8 +24,6 @@ import static no.difi.meldingsutveksling.receipt.ReceiptStatus.*;
 public class DpfConversationStrategyImpl implements DpfConversationStrategy {
 
     private final SvarUtService svarUtService;
-    private final IntegrasjonspunktProperties props;
-    private final BestEduAppReceiptService bestEduAppReceiptService;
     private final ConversationService conversationService;
 
     @Override
@@ -37,7 +31,7 @@ public class DpfConversationStrategyImpl implements DpfConversationStrategy {
     public void send(@NotNull NextMoveOutMessage message) throws NextMoveException {
 
         if (SBDUtil.isReceipt(message.getSbd())) {
-            log.info(String.format("Message [%s] is a receipt - not supported by DPF. Discarding message.", message.getMessageId()));
+            log.info("Message [%s] is a receipt - not supported by DPF. Discarding message.".formatted(message.getMessageId()));
             conversationService.registerStatus(message.getMessageId(), SENDT, LEVERT, LEST);
             return;
         }
@@ -47,13 +41,9 @@ public class DpfConversationStrategyImpl implements DpfConversationStrategy {
         // SvarUt garanterer leveranse etter ok mottak av melding
         conversationService.registerStatus(message.getMessageId(), SENDT, LEVERT);
 
-        Audit.info(String.format("Message [id=%s, serviceIdentifier=%s] sent to SvarUt",
+        Audit.info("Message [id=%s, serviceIdentifier=%s] sent to SvarUt".formatted(
                 message.getMessageId(), message.getServiceIdentifier()),
                 markerFrom(message));
-
-        if (!isNullOrEmpty(props.getNoarkSystem().getType())) {
-            bestEduAppReceiptService.sendAppReceiptToLocalNoark(message);
-        }
     }
 
 }
