@@ -4,24 +4,17 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import lombok.extern.slf4j.Slf4j;
 import no.difi.meldingsutveksling.NextMoveConsts;
 import no.difi.meldingsutveksling.QueueInterruptException;
-import no.difi.meldingsutveksling.domain.MeldingsUtvekslingRuntimeException;
 import no.difi.meldingsutveksling.domain.sbdh.StandardBusinessDocument;
-import no.difi.meldingsutveksling.logging.Audit;
-import no.difi.meldingsutveksling.noarkexchange.IntegrajonspunktReceiveImpl;
 import no.difi.move.common.io.pipe.PromiseRuntimeException;
-import org.apache.commons.lang3.exception.ExceptionUtils;
 import org.slf4j.MDC;
-import org.springframework.beans.factory.ObjectProvider;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.jms.annotation.JmsListener;
 import org.springframework.jms.core.JmsTemplate;
 import org.springframework.stereotype.Component;
 
-import javax.jms.Session;
+import jakarta.jms.Session;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
-
-import static no.difi.meldingsutveksling.logging.MessageMarkerFactory.markerFrom;
 
 /**
  * The idea behind this queue is to avoid loosing messages before they are saved in Noark System.
@@ -38,26 +31,21 @@ public class InternalQueue {
 
     @Value("${difi.move.queue.nextmove-name}")
     private String nextmoveQueue;
-    @Value("${difi.move.queue.noark-name}")
-    private String noarkQueue;
 
     private final JmsTemplate jmsTemplate;
     private final NextMoveSender nextMoveSender;
     private final ObjectMapper objectMapper;
-    private final IntegrajonspunktReceiveImpl integrajonspunktReceive;
     private final DocumentConverter documentConverter;
     private final DeadLetterQueueHandler deadLetterQueueHandler;
 
     public InternalQueue(JmsTemplate jmsTemplate,
                          NextMoveSender nextMoveSender,
                          ObjectMapper objectMapper,
-                         ObjectProvider<IntegrajonspunktReceiveImpl> integrajonspunktReceive,
                          DocumentConverter documentConverter,
                          DeadLetterQueueHandler deadLetterQueueHandler) {
         this.jmsTemplate = jmsTemplate;
         this.nextMoveSender = nextMoveSender;
         this.objectMapper = objectMapper;
-        this.integrajonspunktReceive = integrajonspunktReceive.getIfAvailable();
         this.documentConverter = documentConverter;
         this.deadLetterQueueHandler = deadLetterQueueHandler;
     }
@@ -85,26 +73,6 @@ public class InternalQueue {
         }
     }
 
-    @JmsListener(destination = "${difi.move.queue.noark-name}", containerFactory = "myJmsContainerFactory")
-    public void noarkListener(byte[] message, Session session) {
-        StandardBusinessDocument sbd = documentConverter.unmarshallFrom(message);
-
-        MDC.put(NextMoveConsts.CORRELATION_ID, sbd.getMessageId());
-        try {
-            integrajonspunktReceive.forwardToNoarkSystem(sbd);
-        } catch (Exception e) {
-            if (ExceptionUtils.indexOfType(e, OutOfMemoryError.class) >= 0) {
-                // Forsøk på sending av for store meldinger med BEST/EDU fører til OutOfMemoryError
-                // Det er lite sannsynlig at gjentatte forsøk på å sende samme melding vil fungere
-                // Unngår derfor å prøve på nytt ved denne feilsituasjonen
-                Audit.error("Failed delivering message to archive.. no retry", markerFrom(sbd), e);
-                return;
-            }
-            Audit.warn("Failed delivering message to archive.. queue will retry", markerFrom(sbd), e);
-            throw new MeldingsUtvekslingRuntimeException(e);
-        }
-    }
-
     /**
      * Log failed messages as errors
      *
@@ -121,16 +89,8 @@ public class InternalQueue {
             objectMapper.writeValue(bos, msg);
             jmsTemplate.convertAndSend(nextmoveQueue, bos.toByteArray());
         } catch (IOException e) {
-            throw new NextMoveRuntimeException(String.format("Unable to marshall NextMove message with id=%s", msg.getMessageId()), e);
+            throw new NextMoveRuntimeException("Unable to marshall NextMove message with id=%s".formatted(msg.getMessageId()), e);
         }
     }
 
-    /**
-     * Places the input parameter on the NOARK queue. The NOARK queue sends messages from external sender to NOARK server.
-     *
-     * @param sbd the sbd as received by IntegrasjonspunktReceiveImpl from an external source
-     */
-    public void enqueueNoark(StandardBusinessDocument sbd) {
-        jmsTemplate.convertAndSend(noarkQueue, documentConverter.marshallToBytes(sbd));
-    }
 }
