@@ -5,30 +5,29 @@ import no.difi.meldingsutveksling.ServiceIdentifier;
 import no.difi.meldingsutveksling.clock.FixedClockConfig;
 import no.difi.meldingsutveksling.config.*;
 import no.difi.meldingsutveksling.domain.sbdh.StandardBusinessDocument;
-import no.difi.meldingsutveksling.exceptions.AsicPersistenceException;
 import no.difi.meldingsutveksling.exceptions.AsicReadException;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveInMessageQueryInput;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveMessageInController;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveMessageInService;
+import no.difi.meldingsutveksling.oauth2.Oauth2ClientSecurityConfig;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.core.io.InputStreamResource;
 import org.springframework.core.io.Resource;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.MediaType;
+import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
 
@@ -42,7 +41,6 @@ import java.util.zip.ZipOutputStream;
 import static no.difi.meldingsutveksling.nextmove.RestDocumentationCommon.*;
 import static no.difi.meldingsutveksling.nextmove.StandardBusinessDocumentTestData.*;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.junit.Assert.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.BDDMockito.given;
@@ -57,9 +55,8 @@ import static org.springframework.restdocs.payload.PayloadDocumentation.subsecti
 import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {
-        SecurityConfiguration.class,
+        Oauth2ClientSecurityConfig.class,
         FixedClockConfig.class,
         ValidationConfig.class,
         JacksonConfig.class,
@@ -74,9 +71,9 @@ class NextMoveMessageInControllerTest {
     @Autowired
     private MockMvc mvc;
 
-    @MockBean
+    @MockitoBean
     private NextMoveMessageInService messageService;
-    @MockBean
+    @MockitoBean
     private IntegrasjonspunktProperties integrasjonspunktProperties;
 
     @Mock
@@ -101,6 +98,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -111,12 +109,12 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("Filter on messageId."),
                                         parameterWithName("conversationId").optional().description("Filter on conversationId."),
                                         parameterWithName("receiverIdentifier").optional().description("Filter on receiverIdentifier."),
                                         parameterWithName("senderIdentifier").optional().description("Filter on senderIdentifier."),
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on serviceIdentifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on serviceIdentifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", ")))),
                                         parameterWithName("process").optional().description("Filter on process.")
@@ -145,6 +143,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("serviceIdentifier", "DPO")
                                 .accept(MediaType.APPLICATION_JSON)
                 )
@@ -165,6 +164,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("sort", "lastUpdated,asc")
                                 .accept(MediaType.APPLICATION_JSON)
                 )
@@ -185,6 +185,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("page", "3")
                                 .param("size", "10")
                                 .accept(MediaType.APPLICATION_JSON)
@@ -202,6 +203,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in/peek")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -212,12 +214,12 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("Filter on messageId."),
                                         parameterWithName("conversationId").optional().description("Filter on conversationId."),
                                         parameterWithName("receiverIdentifier").optional().description("Filter on receiverIdentifier."),
                                         parameterWithName("senderIdentifier").optional().description("Filter on senderIdentifier."),
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on serviceIdentifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on serviceIdentifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", ")))),
                                         parameterWithName("process").optional().description("Filter on process.")
@@ -238,6 +240,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in/peek")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("serviceIdentifier", ServiceIdentifier.DPE.getFullname())
                                 .accept(MediaType.APPLICATION_JSON)
                 )
@@ -249,8 +252,8 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on serviceIdentifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                queryParameters(
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on serviceIdentifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", "))))
                                 ),
@@ -273,6 +276,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in/peek")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("messageId", message.getMessageId())
                                 .param("conversationId", message.getConversationId())
                                 .accept(MediaType.APPLICATION_JSON)
@@ -285,7 +289,7 @@ class NextMoveMessageInControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("Filter on messageId"),
                                         parameterWithName("conversationId").optional().description("Filter on conversationId")
                                 ),
@@ -321,6 +325,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         get("/api/messages/in/pop/{messageId}", ARKIVMELDING_SBD.getMessageId())
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(AsicUtils.MIMETYPE_ASICE)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -348,6 +353,7 @@ class NextMoveMessageInControllerTest {
         doThrow(new AsicReadException("test")).when(messageService).handleCorruptMessage(anyString());
 
         mvc.perform(get("/api/messages/in/pop/{messageId}", ARKIVMELDING_SBD.getMessageId())
+                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                 .accept(AsicUtils.MIMETYPE_ASICE))
                 .andExpect(status().is5xxServerError())
                 .andExpect(result -> Assertions.assertTrue(result.getResolvedException() instanceof AsicReadException));
@@ -363,6 +369,7 @@ class NextMoveMessageInControllerTest {
         doThrow(new AsicReadException("test")).when(messageService).handleCorruptMessage(anyString());
 
         mvc.perform(get("/api/messages/in/pop/{messageId}", ARKIVMELDING_SBD.getMessageId())
+                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                 .accept(AsicUtils.MIMETYPE_ASICE))
                 .andExpect(status().is2xxSuccessful());
 
@@ -376,6 +383,7 @@ class NextMoveMessageInControllerTest {
 
         mvc.perform(
                         delete("/api/messages/in/{messageId}", ARKIVMELDING_SBD.getMessageId())
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
