@@ -7,32 +7,31 @@ import no.difi.meldingsutveksling.arkivmelding.ArkivmeldingUtil;
 import no.difi.meldingsutveksling.clock.FixedClockConfig;
 import no.difi.meldingsutveksling.config.JacksonConfig;
 import no.difi.meldingsutveksling.config.MvcConfiguration;
-import no.difi.meldingsutveksling.config.SecurityConfiguration;
 import no.difi.meldingsutveksling.config.ValidationConfig;
 import no.difi.meldingsutveksling.domain.sbdh.StandardBusinessDocument;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveMessageOutController;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveMessageService;
 import no.difi.meldingsutveksling.nextmove.v2.NextMoveUploadedFile;
 import no.difi.meldingsutveksling.nextmove.v2.OnBehalfOfNormalizer;
+import no.difi.meldingsutveksling.oauth2.Oauth2ClientSecurityConfig;
 import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.ArgumentCaptor;
 import org.mockito.Captor;
 import org.mockito.Mock;
 import org.mockito.Mockito;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
-import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.MediaType;
 import org.springframework.mock.web.MockMultipartFile;
+import org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.TestPropertySource;
-import org.springframework.test.context.junit.jupiter.SpringExtension;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.request.MockMvcRequestBuilders;
 import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
@@ -59,9 +58,8 @@ import static org.springframework.restdocs.request.RequestDocumentation.*;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.content;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.status;
 
-@ExtendWith(SpringExtension.class)
 @ContextConfiguration(classes = {
-        SecurityConfiguration.class,
+        Oauth2ClientSecurityConfig.class,
         FixedClockConfig.class,
         ValidationConfig.class,
         JacksonConfig.class,
@@ -78,13 +76,13 @@ class NextMoveMessageOutControllerTest {
     @Autowired
     private ObjectMapper objectMapper;
 
-    @MockBean
+    @MockitoBean
     private NextMoveMessageService messageService;
 
-    @MockBean
+    @MockitoBean
     private OnBehalfOfNormalizer onBehalfOfNormalizer;
 
-    @MockBean
+    @MockitoBean
     private ArkivmeldingUtil arkivmeldingUtil;
 
     @Mock
@@ -109,6 +107,7 @@ class NextMoveMessageOutControllerTest {
                                 .file(new MockMultipartFile("sbd", null, MediaType.APPLICATION_JSON_VALUE, objectMapper.writeValueAsBytes(ARKIVMELDING_INPUT)))
                                 .file(new MockMultipartFile("Before The Law", "before_the_law.txt", MediaType.TEXT_PLAIN_VALUE, "Before the law sits a gatekeeper. To this gatekeeper comes a man from the country who asks to gain entry into the law...".getBytes(StandardCharsets.UTF_8)))
                                 .accept(MediaType.APPLICATION_JSON)
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                 )
                 .andDo(MockMvcResultHandlers.print())
                 .andExpect(status().isOk())
@@ -123,9 +122,10 @@ class NextMoveMessageOutControllerTest {
                                                 .description("The Standard Business Document."),
                                         partWithName("Before The Law")
                                                 .optional()
-                                                .description("There can be zero or more attachments. The name of the part will be used as a title for the attachment.\n" +
-                                                        "The originalFilename will be used as the name of the file in the ASiC.\n" +
-                                                        "Please note that the Content-Type of the part must be set to the MIME-type of the attachment.")
+                                                .description("""
+                                                        There can be zero or more attachments. The name of the part will be used as a title for the attachment.
+                                                        The originalFilename will be used as the name of the file in the ASiC.
+                                                        Please note that the Content-Type of the part must be set to the MIME-type of the attachment.""")
                                 ),
                                 responseFields()
                                         .and(standardBusinessDocumentHeaderDescriptors("standardBusinessDocumentHeader."))
@@ -145,6 +145,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.APPLICATION_JSON)
                                 .content(objectMapper.writeValueAsBytes(ARKIVMELDING_INPUT))
                                 .accept(MediaType.APPLICATION_JSON)
@@ -178,6 +179,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.APPLICATION_JSON)
                                 .content(objectMapper.writeValueAsBytes(DPI_DIGITAL_INPUT))
                                 .accept(MediaType.APPLICATION_JSON)
@@ -211,6 +213,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.APPLICATION_JSON)
                                 .content(objectMapper.writeValueAsBytes(DIGITAL_DPV_INPUT))
                                 .accept(MediaType.APPLICATION_JSON)
@@ -244,6 +247,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.APPLICATION_JSON)
                                 .content(objectMapper.writeValueAsBytes(DPI_PRINT_INPUT))
                                 .accept(MediaType.APPLICATION_JSON)
@@ -277,6 +281,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.APPLICATION_JSON)
                                 .content(objectMapper.writeValueAsBytes(INNSYNSKRAV_INPUT))
                                 .accept(MediaType.APPLICATION_JSON)
@@ -310,6 +315,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.APPLICATION_JSON)
                                 .content(objectMapper.writeValueAsBytes(PUBLISERING_INPUT))
                                 .accept(MediaType.APPLICATION_JSON)
@@ -346,6 +352,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         get("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -356,13 +363,13 @@ class NextMoveMessageOutControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("conversationId").optional().description("Filter on conversationId"),
                                         parameterWithName("messageId").optional().description("Filter on messageId"),
                                         parameterWithName("processIdentifier").optional().description("Filter on processIdentifier"),
                                         parameterWithName("receiverIdentifier").optional().description("Filter on receiverIdentifier"),
                                         parameterWithName("senderIdentifier").optional().description("Filter on senderIdentifier"),
-                                        parameterWithName("serviceIdentifier").optional().description(String.format("Filter on service identifier. Can be one of: %s", Arrays.stream(ServiceIdentifier.values())
+                                        parameterWithName("serviceIdentifier").optional().description("Filter on service identifier. Can be one of: %s".formatted(Arrays.stream(ServiceIdentifier.values())
                                                 .map(Enum::name)
                                                 .collect(Collectors.joining(", "))))
                                 ).and(getPagingParameterDescriptors()),
@@ -390,6 +397,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         get("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("serviceIdentifier", "DPO")
                                 .accept(MediaType.APPLICATION_JSON)
                 )
@@ -410,6 +418,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         get("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("sort", "lastUpdated,asc")
                                 .accept(MediaType.APPLICATION_JSON)
                 )
@@ -430,6 +439,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         get("/api/messages/out")
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .param("page", "3")
                                 .param("size", "10")
                                 .accept(MediaType.APPLICATION_JSON)
@@ -447,6 +457,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         get("/api/messages/out/{messageId}", ARKIVMELDING_MESSAGE_DATA.getMessageId())
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -457,7 +468,7 @@ class NextMoveMessageOutControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("The messageId")
                                 ),
                                 responseFields()
@@ -476,6 +487,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         post("/api/messages/out/{messageId}", ARKIVMELDING_MESSAGE_DATA.getMessageId())
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -486,7 +498,7 @@ class NextMoveMessageOutControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("The messageId")
                                 )
                         )
@@ -500,6 +512,7 @@ class NextMoveMessageOutControllerTest {
     void deleteMessage() throws Exception {
         mvc.perform(
                         delete("/api/messages/out/{messageId}", ARKIVMELDING_MESSAGE_DATA.getMessageId())
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .accept(MediaType.APPLICATION_JSON)
                 )
                 .andDo(MockMvcResultHandlers.print())
@@ -510,7 +523,7 @@ class NextMoveMessageOutControllerTest {
                                 requestHeaders(
                                         getDefaultHeaderDescriptors()
                                 ),
-                                requestParameters(
+                                queryParameters(
                                         parameterWithName("messageId").optional().description("The messageId")
                                 )
                         )
@@ -525,6 +538,7 @@ class NextMoveMessageOutControllerTest {
 
         mvc.perform(
                         put("/api/messages/out/{messageId}", ARKIVMELDING_MESSAGE_DATA.getMessageId())
+                                .with(SecurityMockMvcRequestPostProcessors.httpBasic("testuser", "testpassword"))
                                 .contentType(MediaType.TEXT_PLAIN)
                                 .header(HttpHeaders.CONTENT_DISPOSITION, "attachment; name=Before The Law; filename=before_the_law.txt")
                                 .accept(MediaType.APPLICATION_JSON)
@@ -542,7 +556,7 @@ class NextMoveMessageOutControllerTest {
                                                 "The title can alternatively be specified using the name attribute of the Content-Disposition header. " +
                                                 "The filename is specified in the filename attribute of this header.")
                                 ),
-                        requestParameters(
+                        queryParameters(
                                 parameterWithName("messageId").optional().description("The messageId"),
                                 parameterWithName("title").optional().description("The attachment title can alternatively be specified in this request parameter. " +
                                         "If not specified here, then the title is extracted from the Content-Disposition HTTP header.")
